# learning-fuzzing

./: README.md  forkserver.c
activelearner/: .gitattributes  .gitignore  README.md  build.gradle  javah.sh
activelearner/config/: application-dev.properties  application-target-rers1.properties  application-target-simplestatemachine.properties
activelearner/gradle/wrapper/: gradle-wrapper.properties
activelearner/src/main/java/net/praseodym/activelearner/: ADSEQOracle.java  AFL.java  AFLEQOracle.java  AFLMealyOracle.java  AFLSUL.java  AFLStabilityTest.java  AFLTest.java  AFLTraceBitmapSUL.java  ActivelearnerApplication.java  BasicEquivalenceOracle.java  BasicMembershipOracle.java  DelegatingEquivalenceOracle.java  ForkServer.java  ForkServerMealyOracle.java  ForkServerSUL.java  LoggingSULOracle.java  MealyMachineLearner.java  ProcessSUL.java  SimplifyDot.java  TestSUL.java  test.java
activelearner/src/main/resources/: application.properties  banner.txt
activelearner/src/test/java/: AFLTest.java
activelearner/src/test/java/net/praseodym/activelearner/: ActivelearnerApplicationTests.java
ads/: CMakeLists.txt  LICENSE  README.md
ads/java/: GraphvizParser.java  Main.java  YannakakisEQOracle.java
ads/lib/: CMakeLists.txt  adaptive_distinguishing_sequence.cpp  adaptive_distinguishing_sequence.hpp  logging.hpp  mealy.hpp  partition.hpp  reachability.cpp  reachability.hpp  read_mealy.cpp  read_mealy.hpp  separating_family.cpp  separating_family.hpp  splitting_tree.cpp  splitting_tree.hpp  test_suite.cpp  test_suite.hpp  transfer_sequences.cpp  transfer_sequences.hpp  trie.hpp  types.hpp  write_tree_to_dot.cpp  write_tree_to_dot.hpp
ads/src/: CMakeLists.txt  complete.cpp  distance.cpp  generator.cpp  learning_graph.cpp  main.cpp  measure.cpp  methods.cpp  pre_gephi_tool.cpp  reachability.cpp  scatter_plot.cpp  stats.cpp  trees.cpp  trie_test.cpp
afl/: .gitignore  CMakeLists.txt  README.md  afl-jni.c  afl.c  afl.patch  forkserver.c  memfd.h  net_praseodym_activelearner_AFL.h  net_praseodym_activelearner_ForkServer.h
benchmarks/: CMakeLists.txt  README.md  simpletarget.dot
fsmutils/: .gitignore
fsmutils/cgenerate/: cgenerate.go
fsmutils/mintrace/: mintrace.go
learning/src/learner/: ADSEQOracle.java  CacheInconsistencyException.java  ExampleSUL.java  Main.java  NonDeterminismCheckingSUL.java  ObservationTree.java  ProcessSUL.java  SocketSUL.java
mintrace/: .gitignore  mintrace
passivelearner/: passivetrace.py
rers2015/: .gitignore  CMakeLists.txt  README.md  assert.h
rers2015/Problem1/: Problem1-solutions.txt  Problem1.c  Problem1.java  afl_dict.txt  constraints-RERS15-Problem1.txt
rers2015/Problem2/: Problem2-solutions.txt  Problem2.c  Problem2.java  constraints-RERS15-Problem2.txt
rers2015/Problem3/: Problem3-solutions.txt  constraints-RERS15-Problem3.txt
rers2015/Problem4/: Problem4-Traces.txt  Problem4-solutions.txt  Problem4.c  Problem4.java  Problem4External.c  Problem4External.java  constraints-RERS15-Problem4.txt
rers2015/Problem5/: Problem5-Traces.txt  Problem5-solutions.txt  Problem5.c  Problem5.java  Problem5External.c  Problem5External.java  afl_dict.txt  constraints-RERS15-Problem5.txt
rers2015/Problem6/: Problem6-Traces.txt  Problem6-solutions.txt  Problem6External.c  Problem6External.java  afl_dict.txt  constraints-RERS15-Problem6.txt
rers2015/adsresults/rers1-ads-50-1m/: learnedModel.dot  out.txt
rers2015/adsresults/temp/: out.txt
rers2015/traceconvert/: traceconvert.py
rers2016/: CMakeLists.txt  assert.h
rers2016/Problem10/: Problem10.c
rers2016/Problem11/: Problem11.c
rers2016/Problem12/: Problem12.c
rers2016/Problem13/: Problem13.c
rers2016/Problem14/: Problem14.c
simpletarget/: .gitignore  CMakeLists.txt  simplestatemachine.c  simpletarget.c  simpletarget.cpp  statemachine.c
simpletarget/a.out.dSYM/Contents/Resources/DWARF/: a.out
